k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  labels:
    app: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: 672729160447.dkr.ecr.us-east-1.amazonaws.com/devops-assessment-backend:IMAGE_TAG
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
