k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: default
  labels:
    app: frontend

spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
